# visual-analogy-agent

./: .gitignore  Agent.py  AgentAnswers.csv  ProblemResults.csv  ProblemSet.py  README.md  RavensFigure.py  RavensGrader.py  RavensObject.py  RavensProblem.py  RavensProject.py  SetResults.csv  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
Problems/: ProblemSetList.txt
baselines/: __init__.py
baselines/llm/: __init__.py  solver.py
baselines/torch/: __init__.py  model.py  smoke_weights.pt  solver.py
eval/: __init__.py  harness.py  scorecard.py
rpm_agent/: __init__.py  _impl.py  agent.py  compose.py  detect.py  pixel_ops.py  score.py
scripts/: emit_eval_metrics.py  run_bakeoff.py  smoke.sh
tests/: test_facades_and_baselines.py  test_smoke.py
