[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpm-visual-analogy-agent"
version = "0.1.0"
description = "Visual analogy agent for Raven's Progressive Matrices (2x2 and 3x3)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "All Rights Reserved" }
authors = []
dependencies = [
  "Pillow>=9.0,<12",
  "numpy>=1.20,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9"]

[tool.setuptools]
py-modules = [
  "Agent",
  "ProblemSet",
  "RavensFigure",
  "RavensGrader",
  "RavensObject",
  "RavensProblem",
  "RavensProject",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
